2004-12-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/topdocs/INSTALL.texi (Top): Point to
	buildscripts/out/clean-fonts instead of
	buildscripts/clean-fonts.sh. 

2004-12-13  Graham Percival  <gperlist@shaw.ca>

	* input/regression/figured-bass.ly: attempt to clarify text.

	* Documentation/user/notation.tely: add cindex for tag, attempt to
	add figured bass example.

	* Documentation/user/changing-defaults: basic editing.

2004-12-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* buildscripts/gen-bigcheese-scripts.py (i): load .subfonts table. 

	* lily/open-type-font.cc (LY_DEFINE): new function
	ly:font-sub-fonts

	* lily/include/font-metric.hh (struct Font_metric): new method
	sub_fonts()

	* lily/vaticana-ligature-engraver.cc (transform_heads): replace
	. with - in add.stem.
	
2004-12-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/encoding.scm (coding-alist): Fix encodings for fetaNumber
	and fetaDynamic.

	* lily/rest.cc (glyph_name): Change - to . .

	* scm/output-gnome.scm (text): Hello world, again.

	* scm/output-svg.scm (named-glyph): New function.  Hello world!

	* lily/modified-font-metric.cc (index_to_charcode): New method.

	* lily/include/font-metric.hh (index_to_charcode): New function.

	* lily/font-metric.cc (ly:font-glyph-name-to-charcode): Use it in
	new function.
	(ly:font-glyph-to-index): Remove.

2004-12-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/open-type-font.cc (make_index_to_charcode_map): new method.

	* mf/feta-autometric.mf (code): remove tex name from fet_beginchar.

	* lily/open-type-font.cc (load_scheme_table): new function

	* lily/dots.cc (print): replace - 

	* lily/open-type-font.cc (attachment_point): new function.
	(load_table): read LILC table

	* buildscripts/gen-bigcheese-scripts.py (Module): new
	file. Generate FF scripts.

	* mf/feta-din10.mf: idem.

	* mf/feta-nummer10.mf: remove mf files.

	* mf/feta-alphabet.mf (dynamic_design_size): merge din and number font.
