@@ -1,3 +1,12 @@
+2004-12-14  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scm/lily-library.scm (char->unicode-index): Remove.
+
+	* scm/output-gnome.scm (text): Bugfix for plain string input.
+	Updates.
+
+	* scm/output-svg.scm (svg-font): Add weight to font selection.
+
 2004-12-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* Documentation/topdocs/INSTALL.texi (Top): Point to
